# text-adventure-game

./: README.md  _index.html  game.js  index.html  main.js  pyproject.toml  requestHandlers.js  router.js  scripts.js  styles.css  ui.js  utils.js
backend/: actions.js  app.js  backend.js  backendUtils.js  data.js  game.js  gameState.js  items.js  locationRouter.js  locations.js  package-lock.json  package.json  player.js  pyproject.toml  state.js  utils.js
backend/data/: actions.js  events.js  items.js  locations.js  player.js
backend/routers/: locationRouter.js
backend/src/: app.js  game.js  game.ts  index.ts  utils.js
backend/src/data/: actions.json  items.json  locations.json
backend/src/locations/: locations.ts
backend/src/types/: gameAssets.ts
data/: enums.js  events.js  gameState.js  items.js  locations.js
frontend/: content-area.css  controls-bar.css  frontend.js  frontendUtils.js  gameUI.js  general.css  main.js  navigation-bar.css
frontend/src/: styles.css
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/components/game-panel/: game-panel.component.html  game-panel.component.ts
frontend/src/app/components/inventory-panel/: inventory-panel.component.html  inventory-panel.component.ts
frontend/src/app/components/nav-bar/: nav-bar.component.css  nav-bar.component.html  nav-bar.component.ts
frontend/src/app/services/: action.service.ts  location.service.ts
frontend/styles/: content-area.css  controls-bar.css  general.css
