[tool.poetry]
name = "text-adventure-game"
version = "0.1.0"
description = ""
authors = ["KrisAirdancer <krisairdancer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
